# AGV_ROS2_Control_Manager

./: .gitignore  .trae
result/: output.ply
src/agv_bridge/: CMakeLists.txt  package.xml
src/agv_bridge/include/agv_bridge/: bridge_manager.hpp
src/agv_bridge/src/: bridge_manager.cpp
src/agv_bringup/launch/: agv.launch.xml
src/agv_description/meshes/: tool.STL
src/agv_description/urdf/: agv.xacro
src/agv_hardware/: CMakeLists.txt  ROS2.md  package.xml
src/agv_hardware/include/: robot_gotarget.hpp
src/agv_hardware/include/agv_hardware/: agv_hardware.hpp  config.hpp  robot_controller.hpp  self_check_manager.hpp
src/agv_hardware/src/: agv_hardware_interface.cpp  robot_controller.cpp
src/agv_protocol/include/agv_protocol/: command_parser.hpp
src/agv_protocol/src/: command_parser.cpp
src/camera/config/: camera_tf.yaml
src/camera/src/astras/: astras_camera.cpp
src/camera/src/nodes/: video_web_server.py
src/pathplannernode/result/: output.ply
src/pathplannernode/src/config/: params.yaml
src/pathplannernode/src/pathplanner/: Python_README.md  ROS_README.md  package.xml  setup.cfg  setup.py
src/pathplannernode/src/pathplanner/launch/: pathplanner_launch.py  ros2_pathplanner_launch.py
src/pathplannernode/src/pathplanner/pathplanner/: AttentionPathOptimizer.py  attention_computation.py  attention_path.py  attention_path_ros2.py  local_coordinate.py  local_frames.py  path_generation.py  path_optimization.py  pointcloud_processing.py  test_imports.py  utils.py  visualization.py
src/pathplannernode/src/pathplanner/pathplanner_ros/: __init__.py  (+2 more)
(+1 files in other folders)
